# Rag_with_jwt_task

./: .gitignore  README.md  pyproject.toml  sample.env
app/: config.py  main.py  middleware.py
app/auth/: auth_utils.py  jwt_handler.py
app/models/: schemas.py
app/rag/: __init__.py  config.py  file_processor.py  models.py  rag_system.py  vector_db.py
app/routers/: auth.py  chat.py  users.py
app/services/: celery_app.py  database.py  task.py
